BusOne/src/objects/Survey_Question_vod__c.object
<CustomObject>
    <description>Ordered questions associated with a particular survey target.</description>
    <fields>
        <fullName>Answer_Choice_vod__c</fullName>
        <description>Stores the potential answer choices for multiselect picklist, picklist, and radio questions. If the question is taken from question bank, this value will be copied from Question_vod.  Weights and response text can all be edited and will not change the question bank entry.</description>
        <label>Answer Choices</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Score_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set by trigger every time response values are updated.  This stores the maximum possible score for a given question.  It only appears on picklist, multiselect picklist, and radio questions where at least one score is entered.  If no scores are entered, the value is 0.</description>
        <label>Max Score</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Score_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set by trigger every time response values are updated.  This stores the minimum possible score for a given question.  It only appears on picklist, multiselect picklist, and radio questions where at least one score is entered.  If no scores are entered, the value is 0.</description>
        <label>Min Score</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_vod__c</fullName>
        <description>The display order of a question within the survey.</description>
        <label>Question Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number_vod__c</fullName>
        <description>Field that is Stamped with the corresponding number of the survey question as it displays in the UI.</description>
        <label>Question Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links a survey question to a question record.</description>
        <label>Question</label>
        <referenceTo>Question_vod__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked as required, a question becomes required on the survey.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_vod__c</fullName>
        <description>Links a question to a survey.</description>
        <label>Survey Header</label>
        <referenceTo>Survey_vod__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_vod__c</fullName>
        <description>Question text.</description>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Text_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SQ{00000000}</displayFormat>
        <label>Survey Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <recordTypes>
        <fullName>Date_vod</fullName>
        <active>true</active>
        <description>Used for date questions.</description>
        <label>Date_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Datetime_vod</fullName>
        <active>true</active>
        <description>Used for datetime questions.</description>
        <label>Datetime_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decimal_vod</fullName>
        <active>true</active>
        <description>Stores the answer value for decimal type questions</description>
        <label>Decimal_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Description_vod</fullName>
        <active>true</active>
        <description>Used for description text.</description>
        <label>Description_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Long_Text_vod</fullName>
        <active>true</active>
        <description>Used for text questions where the answer is limited to 2,500 characters.</description>
        <label>Long_Text_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiselect_vod</fullName>
        <active>true</active>
        <description>Used for multselect picklist type questions.</description>
        <label>Multiselect_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Number_vod</fullName>
        <active>true</active>
        <description>Used for number questions.</description>
        <label>Number_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist_vod</fullName>
        <active>true</active>
        <description>Used for picklist questions. Picklist and radio type questions both only allow a single answer choice, but picklist questions display in a dropdown box.</description>
        <label>Picklist_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radio_vod</fullName>
        <active>true</active>
        <description>Used for radio questions.</description>
        <label>Radio_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text_vod</fullName>
        <active>true</active>
        <description>Used for text questions where the answer is limited to 255 characters.</description>
        <label>Text_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>